Bug 314762 - (Desktop Effect) Mouse Click Animation does not work when rising or focusing a window
Summary: (Desktop Effect) Mouse Click Animation does not work when rising or focusing ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.10.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 4.10.1
Assignee: KWin default assignee
URL: http://git.reviewboard.kde.org/r/108883/
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-09 14:54 UTC by Denis M. (Phr33d0m)
Modified: 2013-02-12 21:30 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10.1
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Denis M. (Phr33d0m) 2013-02-09 14:54:45 UTC
Hello, 
The effect does not work (the rings don't appear) when you click with left mouse on a window to rise or focus it.
Once the window is on focus it works again without issues.

Reproducible: Always
Comment 1 Thomas Lübking 2013-02-12 21:29:37 UTC
Git commit 5f883972cafaa420681e3932705dea0ad715e3ff by Thomas Lübking.
Committed on 10/02/2013 at 06:56.
Pushed by luebking into branch 'KDE/4.10'.

catch releases without presses

happens when the polling misses the press when doing more
important things

also shortcut buttons == oldButtons
FIXED-IN: 4.10.1
REVIEW: 108883

M  +5    -1    kwin/effects/mouseclick/mouseclick.cpp

http://commits.kde.org/kde-workspace/5f883972cafaa420681e3932705dea0ad715e3ff
Comment 2 Thomas Lübking 2013-02-12 21:30:17 UTC
Git commit 16badf8426ba50b8689a7bf359402353573c6246 by Thomas Lübking.
Committed on 10/02/2013 at 06:56.
Pushed by luebking into branch 'master'.

catch releases without presses

happens when the polling misses the press when doing more
important things

also shortcut buttons == oldButtons
FIXED-IN: 4.10.1
REVIEW: 108883

M  +5    -1    kwin/effects/mouseclick/mouseclick.cpp

http://commits.kde.org/kde-workspace/16badf8426ba50b8689a7bf359402353573c6246